--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Favicon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/Favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Your destination for handpicked Design Jobs"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Favicon.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +20,7 @@
     <meta property="og:site_name" content="MatchByDesignSundays" />
     <meta property="og:title" content="Match By Design Sundays" />
     <meta property="og:url" content="https://match.designsundays.in/" />
-    <meta property="og:image" content="{{ asset('favicon.ico') }}" />
+    <meta property="og:image" content="{{ asset('Favicon.png') }}" />
     <meta property="og:image:url" content="https://match.designsundays.in/" />
     <meta property="og:image:alt" content="Match By Design Sundays" />
     <meta property="og:image:width" content="1200" />
