Add: InfoModal and Bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="images/ico" />
     <meta property="og:description" content="Match By Design Sundays" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
